Day 4: Flink WordCount + 类型擦除理解